<resources>
    <string name="app_name">What\'s up, doc?</string>
    <string name="welcome">Set an appointment</string>
    <string name="logIn">Log in</string>
    <string name="createAccount">Create account</string>
    <string name="createAccountUnderlined"><u>Create account</u></string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ssn">SSN</string>
    <string name="password">Password</string>
    <string name="doctorLogIn">Doctor log in</string>
    <string name="patientLogIn">Patient log in</string>
    <string name="name">Name</string>
    <string name="email">E-mail address</string>
    <string name="phone">Phone number</string>
    <string name="country">Country</string>
    <string name="city">City</string>
    <string name="doctor">Doctor</string>
    <string name="patient">Patient</string>
    <string name="next">Next</string>
    <string name="emptyFields">All fields are required</string>
    <string name="invalidInput">Invalid input</string>
    <string name="invalidCredentials">Email and password don\'t match</string>
    <string name="clinicName">Clinic name</string>
    <string name="cvr">CVR</string>
    <string name="address">Address</string>
    <string name="specialization">Specialization</string>
    <string name="birthday">Birthday</string>
    <string name="selectBday">Select birthdate</string>
    <string name="repeatPassword">Re-enter password</string>
    <string name="setPassword">Set your password</string>
    <string name="passwordsDontMatch">Passwords don\'t match</string>
    <string name="welcomeText">Hi, </string>
    <string name="home">Home</string>
    <string name="viewAppointments">View upcoming appointments</string>
...
