...
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:src="@drawable/logo"/>


    <FrameLayout
        android:id="@+id/fragmentContainer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

</LinearLayout>
